<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.softwareag</groupId>
  <artifactId>lora</artifactId>
  <version>1.1.9-SNAPSHOT</version>
  <packaging>pom</packaging>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <c8y.version>2025.87.0</c8y.version>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <maven.compiler.release>21</maven.compiler.release>
    <spring-boot.version>3.5.5</spring-boot.version>
    <feign.version>13.2.1</feign.version>
    <retrofit2.version>2.9.0</retrofit2.version>
  </properties>
  <repositories>
    <repository>
      <id>cumulocity</id>
      <layout>default</layout>
      <url>https://download.cumulocity.com/maven/repository</url>
    </repository>
  </repositories>
  <pluginRepositories>
    <pluginRepository>
      <id>cumulocity</id>
      <layout>default</layout>
      <url>https://download.cumulocity.com/maven/repository</url>
    </pluginRepository>
  </pluginRepositories>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.nsn.cumulocity.clients-java</groupId>
        <artifactId>java-client</artifactId>
        <version>${c8y.version}</version>
      </dependency>
      <dependency>
        <groupId>com.nsn.cumulocity.model</groupId>
        <artifactId>device-capability-model</artifactId>
        <version>${c8y.version}</version>
      </dependency>
      <dependency>
        <groupId>org.openapitools</groupId>
        <artifactId>jackson-databind-nullable</artifactId>
        <version>0.2.6</version>
      </dependency>
      <dependency>
        <groupId>io.github.openfeign</groupId>
        <artifactId>feign-core</artifactId>
        <version>${feign.version}</version>
      </dependency>
      <dependency>
        <groupId>io.github.openfeign</groupId>
        <artifactId>feign-jackson</artifactId>
        <version>${feign.version}</version>
      </dependency>
      <dependency>
        <groupId>io.github.openfeign</groupId>
        <artifactId>feign-slf4j</artifactId>
        <version>${feign.version}</version>
      </dependency>
      <dependency>
        <groupId>io.github.openfeign</groupId>
        <artifactId>feign-okhttp</artifactId>
        <version>${feign.version}</version>
      </dependency>
      <dependency>
        <groupId>io.github.openfeign.form</groupId>
        <artifactId>feign-form</artifactId>
        <version>3.8.0</version>
      </dependency>
      <dependency>
        <groupId>com.squareup.retrofit2</groupId>
        <artifactId>retrofit</artifactId>
        <version>${retrofit2.version}</version>
      </dependency>
      <dependency>
        <groupId>com.squareup.retrofit2</groupId>
        <artifactId>converter-jackson</artifactId>
        <version>${retrofit2.version}</version>
      </dependency>
      <dependency>
        <groupId>com.nsn.cumulocity.clients-java</groupId>
        <artifactId>microservice-dependencies</artifactId>
        <version>${c8y.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.projectlombok</groupId>
        <artifactId>lombok</artifactId>
        <version>1.18.30</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>com.google.code.findbugs</groupId>
        <artifactId>jsr305</artifactId>
        <version>3.0.2</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-maven-plugin</artifactId>
          <version>${spring-boot.version}</version>
          <executions>
            <execution>
              <goals>
                <goal>repackage</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>com.nsn.cumulocity.clients-java</groupId>
          <artifactId>microservice-package-maven-plugin</artifactId>
          <version>${c8y.version}</version>
          <executions>
            <execution>
              <id>package</id>
              <phase>package</phase>
              <goals>
                <goal>package</goal>
              </goals>
              <configuration>
                <deleteImage>false</deleteImage>
                <srcDockerDir>${project.parent.basedir}/docker</srcDockerDir>
              </configuration>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.3.0</version>
          <configuration>
            <argLine>-XX:+EnableDynamicAgentLoading</argLine>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.13.0</version>
        </plugin>
        <plugin>
          <groupId>org.owasp</groupId>
          <artifactId>dependency-check-maven</artifactId>
          <version>10.0.3</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <profiles>
    <profile>
      <id>ci</id>
      <modules>
        <module>github-proxy</module>
        <module>lora-interface</module>
        <module>lora-codec-ms</module>
        <module>lora-ns-ms</module>
        <module>lora-codec-cayennelpp</module>
        <module>lora-codec-nke</module>
        <module>lora-codec-pyrescom-classair</module>
        <module>lora-codec-senlab</module>
        <module>lora-codec-semtech</module>
        <module>lora-codec-axioma</module>
        <module>lora-codec-atim-th</module>
        <module>lora-codec-atim-tm2d</module>
        <module>lora-codec-atim-tmxd</module>
        <module>lora-codec-acs-switch</module>
        <module>lora-codec-c8y</module>
        <module>lora-ns-kerlink</module>
        <module>lora-ns-objenious</module>
        <module>lora-ns-orbiwise</module>
        <module>lora-ns-loriot</module>
        <module>lora-ns-ttn</module>
        <module>lora-ns-actility</module>
        <module>lora-codec-elsys</module>
        <module>lora-codec-lansitec</module>
        <module>lora-codec-example</module>
        <module>lora-ns-generic</module>
        <module>lora-ns-liveobjects</module>
        <module>lora-ns-chirpstack</module>
        <module>lora-ns-netmore</module>
      </modules>
    </profile>
  </profiles>
</project>